<resources>
    <string name="app_name">Thư Viện Phương Đông</string>
    <string name="quan_ly_phieu_muon">Quản lý Phiếu Mượn</string>
    <string name="quan_ly_loai_sach">Quản lý Loại Sách</string>
    <string name="quan_ly_sach">Quản lý Sách</string>
    <string name="quan_ly_thanh_vien">Quản lý Thành viên</string>
    <string name="thong_ke">Thống kê</string>
    <string name="muoi_sach_muon_nhieu_nhat">10 Sách mượn nhiều nhất</string>
    <string name="doanh_thu">Doanh Thu: </string>
    <string name="them_nguoi_dung">Thêm người dùng</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="nguoi_dung">Người dùng</string>
    <string name="nhap_ten"><b>Nhập tên đăng nhập</b></string>
    <string name="nhap_mat_khau"><b>Nhập mật khẩu</b></string>
    <string name="bo_qua"><b>Bỏ qua</b></string>
    <string name="dang_nhap"><b>Đăng nhập</b></string>
    <string name="luu_dang_nhap"><b>Lưu đăng nhập</b></string>
    <string name="chao_mung_admin"><b>Chào mừng Admin</b></string>
    <string name="xin_chao"><i>Xin chào</i></string>
    <string name="Open">Mở</string>
    <string name="Close">Đóng</string>
    <string name="den_ngay">Đến ngày</string>
    <string name="logo">Ảnh</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="huy"><b>Hủy</b></string>
    <string name="ma_sach"><b>Mã Sách</b></string>
    <string name="luu"><b>Lưu</b></string>
    <string name="nhap_password"><b>Nhập Mật Khẩu</b></string>
    <string name="nhap_lai_password"><b>Nhập Lại Mật Khẩu</b></string>
    <string name="nhap_username"><b>Nhập Tên Đăng Nhập</b></string>
    <string name="nhap_old_password"><b>Nhập Password Cũ</b></string>
    <string name="them_nguoi_dung_moi"><b>Thêm\nNgười Dùng Mới</b></string>
    <string name="tro_ve"><b>Trở Về</b></string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="tu_ngay">Từ ngày</string>
    <string name="ten_dang_nhap"><b>Tên Đăng Nhập</b></string>
    <string name="them"><b>Thêm</b></string>
    <string name="ma_thanh_vien">Mã Thành Viên</string>
    <string name="ten_thanh_vien"><b>Tên thành viên</b></string>
    <string name="nam_sinh">Năm Sinh</string>
    <string name="ma_phieu_muon"><b>Mã Phiếu Mượn</b></string>
    <string name="ten_phieu_muon"><b>Tên Phiếu Mượn</b></string>
    <string name="ten_sach"><b>Tên Sách</b></string>
    <string name="tra_sach"><b>Trả Sách</b></string>
    <string name="tien_thue"><b>Tiền Thuê: </b></string>
    <string name="ngay">Ngày: </string>
    <string name="da_tra_sach">Đã Trả Sách</string>
    <string name="stt">Số thứ tự</string>
    <string name="ma_loai_sach">Mã Loại Sách</string>
    <string name="gia_thue"><b>Giá Thuê</b></string>
    <string name="anh">Ảnh</string>
    <string name="ten_loai_sach">Tên Loại Sach</string>
    <string name="floating_action_button">FloatingActionButton</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>