<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="10">
        <TextView
            android:id="@+id/tvMaPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/ma_phieu_muon"/>
        <TextView
            android:id="@+id/tvTenTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/ten_thanh_vien"
            android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvTenSach"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="24sp"
            android:text="@string/ten_sach"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTraSachs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tra_sach" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvTienThue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/tien_thue"/>
        <TextView
            android:id="@+id/tvNgay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/ngay"/>
    </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/imgDel"
        android:layout_width="0dp"
        android:layout_height="102dp"
        android:layout_weight="1"
        android:src="@drawable/baseline_delete_24"
        android:contentDescription="@string/anh" />
</LinearLayout>