<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="10">
        <TextView
            android:id="@+id/tvMaTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:text="@string/ma_thanh_vien"/>
        <TextView
            android:id="@+id/tvTenTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="27sp"
            android:textStyle="bold"
            android:text="@string/ten_thanh_vien"/>
        <TextView
            android:id="@+id/tvNamSinh"
            android:textSize="27sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nam_sinh"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/imgDel"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:layout_weight="1"
        android:src="@drawable/baseline_delete_24"
        android:contentDescription="@string/anh" />
</LinearLayout>