<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="31dp"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edMaPM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ma_phieu_muon"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <Spinner
        android:id="@+id/spMaTV"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="5dp"/>
    <Spinner
        android:id="@+id/spMaSach"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:id="@+id/tvNgay"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:text="@string/ngay"
        android:textSize="17sp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="5dp"/>
    <TextView
        android:id="@+id/tvTienThue"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:text="@string/tien_thue"
        android:textSize="17sp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="5dp"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chkTraSachs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/da_tra_sach"
        android:clickable="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="5dp"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLuu1"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/luu"
            android:drawableStart="@drawable/baseline_save_24"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBoQua"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/huy"
            android:drawableStart="@drawable/baseline_cancel_24"
            android:drawablePadding="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>