<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="9dp"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    android:background="@mipmap/anhnen"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_marginTop="13dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:layout_marginBottom="70dp"
        android:src="@mipmap/logo"
        android:contentDescription="@string/logo"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edTenDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/nhap_ten"
            android:inputType="textPersonName"
            android:textSize="27sp" />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="10dp"
                android:hint="@string/nhap_mat_khau"
                android:inputType="textPassword"
                android:textSize="27sp" />
        </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/chkLuu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/luu_dang_nhap"
        android:textSize="21sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="12dp">

        <Button
            android:id="@+id/btnDangNhap"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:text="@string/dang_nhap"
            android:textSize="19sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnBoQua"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/bo_qua"
            android:textSize="19sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>