<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edMaSach"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/ma_sach"
        android:textColorHint="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:importantForAutofill="no"
        android:inputType="none" />
    <EditText
        android:id="@+id/edTenSach"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/ten_sach"
        android:textColorHint="@color/black"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:importantForAutofill="no"
        android:inputType="text" />
    <EditText
        android:id="@+id/edGiaThue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/gia_thue"
        android:textColorHint="@color/black"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="#E11F1F"/>
    <RelativeLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/luu"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:drawableStart="@drawable/baseline_save_24"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/huy"
            android:layout_marginEnd="25dp"
            android:layout_alignParentEnd="true"
            android:drawableStart="@drawable/baseline_cancel_24"/>
    </RelativeLayout>
</LinearLayout>