<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edMaLoaiSach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ma_loai_sach"
        android:layout_marginTop="50dp"
        android:inputType="none"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/edTenLoaiSach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ten_loai_sach"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="Autofill" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/luu"
            android:layout_alignParentStart="true"
            android:drawablePadding="5dp"
            android:layout_marginStart="25dp"
            android:drawableStart="@drawable/baseline_save_24"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/huy"
            android:layout_marginEnd="25dp"
            android:drawablePadding="5dp"
            android:layout_alignParentEnd="true"
            android:drawableStart="@drawable/baseline_cancel_24"/>
    </RelativeLayout>
</LinearLayout>