<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="25dp"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edMaTV"
        android:inputType="none"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:hint="@string/ma_thanh_vien"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:importantForAutofill="no" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edTenTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ten_thanh_vien"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNamSinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:hint="@string/nam_sinh"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">
        <androidx.appcompat.widget.AppCompatButton
            android:backgroundTint="#C63C3C"
            android:id="@+id/btnSaveTV"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:text="@string/luu"
            android:textSize="11sp"
            android:drawableStart="@drawable/baseline_save_24"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelTV"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:text="@string/bo_qua"
            android:textSize="11sp"
            android:backgroundTint="#F32AB8AC"
            android:drawableStart="@drawable/baseline_cancel_24"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>