<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/anh"
    android:paddingTop="125dp"
    tools:context=".Fragment.AddUserFragment">

    <!-- TODO: Update blank fragment layout -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="23dp">
                <TextView
                    android:id="@+id/tvThemNguoiDungMoi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/them_nguoi_dung_moi"
                    android:textColor="@android:color/holo_blue_dark"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="48sp"/>
                <EditText
                    android:id="@+id/edTenDangNhap"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/robo"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:background="@drawable/custom_editext"
                    android:hint="@string/ten_dang_nhap"
                    android:padding="7dp"
                    android:textSize="26sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:importantForAutofill="no" />
                <EditText
                    android:id="@+id/edHoVaTen"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/robo"
                    android:inputType="textPersonName"
                    android:background="@drawable/custom_editext"
                    android:hint="@string/ho_va_ten"
                    android:padding="7dp"
                    android:textSize="26sp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:importantForAutofill="no" />
                <EditText
                    android:id="@+id/edNhapMatKhau"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/robo"
                    android:background="@drawable/custom_editext"
                    android:hint="@string/nhap_mat_khau"
                    android:textSize="26sp"
                    android:padding="7dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:importantForAutofill="no" />
                <EditText
                    android:id="@+id/edNhapLaiMatKhau"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_editext"
                    android:hint="@string/nhap_lai_password"
                    android:fontFamily="@font/robo"
                    android:padding="7dp"
                    android:textSize="26sp"
                    android:inputType="textPassword"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:importantForAutofill="no"
                    android:autofillHints="" />
                <Button
                    android:id="@+id/btnThem"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/them"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    />
                <Button
                    android:id="@+id/btnTroVe"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:padding="5dp"
                    android:text="@string/tro_ve"
                    android:textSize="18sp"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
</FrameLayout>