<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Fragment.DoanhThuFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btnTuNgay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tu_ngay"/>
            <EditText
                android:id="@+id/edTuNgay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/yyyy_mm_dd"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btnDenNgay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/den_ngay"/>
            <EditText
                android:id="@+id/edDenNgay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/yyyy_mm_dd"
                android:textSize="18sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnDoanhThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/doanh_thu"/>

        <TextView
            android:id="@+id/tvDoanhThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doanh_thu"
            android:textSize="30sp" />
    </LinearLayout>

</FrameLayout>